Create installer scripts.